--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="intro">
     <img src="ID photo.jpg" alt="Kaviyarasan Photo" class="profile-pic">
     <div>
-      <h2>Frontend Developer | AI Enthusiast</h2>
+      <h2>Frontend Developer </h2>
       <p>Email: <a href="mailto:kavigunasekar185@gmail.com">kavigunasekar185@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/kaviyarasan-g-11068125a" target="_blank">View Profile</a></p>
     </div>
