--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p><strong>Tech:</strong> Python, PyTorch, CUDA, Flask, Tkinter</p>
       <ul>
         <li>Trained transformer model on Indian legal corpus, boosted performance by 40%</li>
-        <li>Built AI chatbot GUI with  </li>
+        <li>Built AI chatbot GUI with 500ms latency </li>
       </ul>
     </div>
 
