--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
   <section class="section">
     <h2>Social Profiles</h2>
     <ul class="social-links">
-      <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+      <li><a href="https://github.com/kaviyarasan-2005" target="_blank">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/kaviyarasan-g-11068125a" target="_blank">LinkedIn</a></li>
       <li><a href="https://leetcode.com/u/kavi-185/" target="_blank">LeetCode</a></li>
     </ul>
